@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2012 the original author or authors.
+ * Copyright 2002-2016 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -22,6 +22,7 @@ import java.lang.annotation.Retention;
 import java.lang.annotation.RetentionPolicy;
 import java.lang.annotation.Target;
 
+import org.springframework.core.annotation.AliasFor;
 import org.springframework.ui.Model;
 
 /**
@@ -49,6 +50,7 @@ import org.springframework.ui.Model;
  * access to a {@link Model} argument.
  *
  * @author Juergen Hoeller
+ * @author Rossen Stoyanchev
  * @since 2.5
  */
 @Target({ElementType.PARAMETER, ElementType.METHOD})
@@ -57,13 +59,31 @@ import org.springframework.ui.Model;
 public @interface ModelAttribute {
 
 	/**
+	 * Alias for {@link #name}.
+	 */
+	@AliasFor("name")
+	String value() default "";
+
+	/**
 	 * The name of the model attribute to bind to.
 	 * <p>The default model attribute name is inferred from the declared
 	 * attribute type (i.e. the method parameter type or method return type),
 	 * based on the non-qualified class name:
 	 * e.g. "orderAddress" for class "mypackage.OrderAddress",
 	 * or "orderAddressList" for "List&lt;mypackage.OrderAddress&gt;".
+	 * @since 4.3
 	 */
-	String value() default "";
+	@AliasFor("value")
+	String name() default "";
+
+	/**
+	 * Allows declaring data binding disabled directly on an
+	 * {@code @ModelAttribute} method parameter or on the attribute returned from
+	 * an {@code @ModelAttribute} method, both of which would prevent data
+	 * binding for that attribute.
+	 * <p>By default this is set to "true" in which case data binding applies.
+	 * Set this to "false" to disable data binding.
+	 */
+	boolean binding() default true;
 
 }
